# lx106-hal

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
include/: Makefile.am
include/xtensa/: cacheattrasm.h  coreasm.h  corebits.h  xtensa-xer.h
include/xtensa/config/: core-isa.h  core-matmap.h  core.h  system.h  tie-asm.h  tie.h
src/: Makefile.am  attribute.c  cache.c  cache_asm.S  clock.S  coherence.c  debug.c  debug_hndlr.S  disass.c  int_asm.S  interrupts.c  mem_ecc_parity.S  memcopy.S  misc.c  mmu.c  mp_asm.S  state.c  state_asm.S  syscache_asm.S  windowspill_asm.S
