# Copyright (c) 2014-2015 Tommie Gannert
#
# See the LICENSE file.
#

lx106_config_headers = \
	xtensa/config/core.h \
	xtensa/config/core-isa.h \
	xtensa/config/core-matmap.h \
	xtensa/config/defs.h \
	xtensa/config/specreg.h \
	xtensa/config/system.h \
	xtensa/config/tie-asm.h \
	xtensa/config/tie.h

nobase_include_HEADERS = \
	xtensa/cacheasm.h \
	xtensa/coreasm.h \
	xtensa/corebits.h \
	xtensa/hal.h \
	xtensa/xtensa-xer.h \
	$(lx106_config_headers)
